--- a/ZeroShotDatasetTest.ipynb
+++ b/ZeroShotDatasetTest.ipynb
@@ -70,18 +70,31 @@
     "        for param in self.clip.parameters():\n",
     "            param.requires_grad = False\n",
     "\n",
-    "    def forward(self, x, condition):\n",
+    "    def forward(self, x, x_c, condition):\n",
     "        condition = self.clip.text_model(condition).last_hidden_state\n",
-    "        pe = self.clip.vision_model(x).last_hidden_state\n",
+    "        pe = self.clip.vision_model(x_c).last_hidden_state\n",
     "\n",
     "        out = self.segformer(x, pe, condition)\n",
     "        return out\n",
     "    \n",
     "    def training_step(self, batch, batch_idx):\n",
-    "        x, condition, y = batch\n",
-    "        y_hat = self(x, condition)\n",
+    "        x, x_c, condition, y = batch\n",
+    "        y_hat = self(x, x_c, condition)\n",
     "        loss = self.neloss(y_hat, y)\n",
     "        self.log(\"train_loss\", loss, prog_bar=True)\n",
+    "\n",
+    "        t_y_hat = torch.where(y_hat > 0.5, 1, 0).long().view(-1)\n",
+    "        t_y = torch.where(y > 0.5, 1, 0).long().view(-1)\n",
+    "\n",
+    "        acc = self.acc(t_y_hat, t_y)\n",
+    "        dice = self.dice(y_hat, y)\n",
+    "        iou = self.iou(y_hat, y)\n",
+    "        f1 = self.f1score(t_y_hat, t_y)\n",
+    "\n",
+    "        self.log(\"train_acc\", acc, prog_bar=True)\n",
+    "        self.log(\"train_dice\", dice, prog_bar=True)\n",
+    "        self.log(\"train_iou\", iou, prog_bar=True)\n",
+    "        self.log(\"train_f1\", f1, prog_bar=True)\n",
     "        \n",
     "        if self.global_step % self.plot_every == 0: \n",
     "            y = y.repeat(1, 3, 1, 1)\n",
@@ -96,8 +109,8 @@
     "        return loss\n",
     "    \n",
     "    def validation_step(self, batch, batch_idx):\n",
-    "        x, condition, y = batch\n",
-    "        y_hat = self(x, condition)\n",
+    "        x, x_c, condition, y = batch\n",
+    "        y_hat = self(x, x_c, condition)\n",
     "        loss = self.neloss(y_hat, y)\n",
     "\n",
     "        t_y_hat = torch.where(y_hat > 0.5, 1, 0).long().view(-1)\n",
@@ -117,8 +130,8 @@
     "        return loss\n",
     "    \n",
     "    def test_step(self, batch, batch_idx):\n",
-    "        x, condition, y = batch\n",
-    "        y_hat = self(x, condition)\n",
+    "        x, x_c, condition, y = batch\n",
+    "        y_hat = self(x, x_c, condition)\n",
     "\n",
     "        t_y_hat = torch.where(y_hat > 0.5, 1, 0).long().view(-1)\n",
     "        t_y = torch.where(y > 0.5, 1, 0).long().view(-1)\n",
@@ -152,9 +165,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(\"train.csv\")\n",
-    "val_df = pd.read_csv(\"val.csv\")\n",
+    "train_df = pd.read_csv(\"ProcessedDatasetStuff/csv/train.csv\")\n",
     "clip_processor = CLIPProcessor.from_pretrained('openai/clip-vit-base-patch16')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_freqs = train_df[\"label\"].value_counts()\n",
+    "min_freq = label_freqs.min()\n",
+    "max_freq = label_freqs.max()\n",
+    "\n",
+    "# balance dataset\n",
+    "balanced_train_df = pd.DataFrame(columns=train_df.columns)\n",
+    "for label in train_df[\"label\"].unique():\n",
+    "    balanced_train_df = balanced_train_df.append(train_df[train_df[\"label\"] == label].sample(min_freq), ignore_index=True)\n",
+    "\n",
+    "balanced_train_df[\"label\"].value_counts()\n"
    ]
   },
   {
@@ -174,13 +213,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complete_dataset = ZeroShotDataset(\n",
-    "    df = train_df, \n",
-    "    # image_folder = 'C:/Datasets/COCO/P/ProcessedDataset/images/train/',\n",
-    "    image_folder = 'ProcessedDataset/images/train/',\n",
-    "    # mask_folder = \"C:/Datasets/COCO/P/ProcessedDataset/masks/train/\",\n",
-    "    mask_folder = 'ProcessedDataset/masks/train/',\n",
-    "    mask_size = 56,\n",
+    "train_dataset = ZeroShotDataset(\n",
+    "    df = balanced_train_df, \n",
+    "    image_folder = 'ProcessedDatasetStuff/images/train/',\n",
+    "    mask_folder = 'ProcessedDatasetStuff/masks/train/',\n",
+    "    image_size = 512,\n",
+    "    mask_size = 512//4,\n",
     "    templates = TrainParams.TEMPLATES, \n",
     "    unseen_classes = TrainParams.UNSEEN_CLASSES, \n",
     "    image_processor = clip_processor, \n",
@@ -189,9 +227,19 @@
     "    filter_seen = True\n",
     ")\n",
     "\n",
-    "train_size = int(TrainParams.TRAIN_VAL_SPLIT * len(complete_dataset))\n",
-    "val_size = len(complete_dataset) - train_size\n",
-    "train_dataset, val_dataset = random_split(complete_dataset, [train_size, val_size], generator=torch.Generator().manual_seed(SEED))"
+    "val_dataset = ZeroShotDataset(\n",
+    "    df = balanced_train_df, \n",
+    "    image_folder = 'ProcessedDatasetStuff/images/train/',\n",
+    "    mask_folder = 'ProcessedDatasetStuff/masks/train/',\n",
+    "    image_size = 512,\n",
+    "    mask_size = 512//4,\n",
+    "    templates = TrainParams.TEMPLATES, \n",
+    "    unseen_classes = TrainParams.UNSEEN_CLASSES, \n",
+    "    image_processor = clip_processor, \n",
+    "    tokenizer = clip_processor.tokenizer, \n",
+    "    filter_unseen = True,\n",
+    "    filter_seen = False\n",
+    ")"
    ]
   },
   {
@@ -220,8 +268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=True, collate_fn=complete_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
-    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=False, collate_fn=complete_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=True, collate_fn=train_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=False, collate_fn=val_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
     "test_model = CLIPConditionedSegFormer()"
    ]
   },
@@ -241,10 +289,10 @@
    "outputs": [],
    "source": [
     "checkpoint_callback = ModelCheckpoint(\n",
-    "    monitor='val_loss',\n",
+    "    monitor='val_iou',\n",
     "    filename='transformer-{epoch:02d}-{val_loss:.2f}',\n",
     "    save_top_k=3,\n",
-    "    mode='min',\n",
+    "    mode='max',\n",
     "    dirpath='checkpoints/',\n",
     "    save_last=True,\n",
     "    verbose=True\n",
@@ -268,6 +316,13 @@
    "source": [
     "trainer.fit(test_model, train_loader, val_loader)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
