--- a/ZeroShotDatasetTest.ipynb
+++ b/ZeroShotDatasetTest.ipynb
@@ -268,8 +268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=True, collate_fn=train_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
-    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=False, collate_fn=val_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=4, shuffle=True, collate_fn=train_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=4, shuffle=False, collate_fn=val_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
     "test_model = CLIPConditionedSegFormer()"
    ]
   },
@@ -290,7 +290,7 @@
    "source": [
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_iou',\n",
-    "    filename='transformer-{epoch:02d}-{val_loss:.2f}',\n",
+    "    filename='transformer-{epoch:02d}-{val_iou:.2f}',\n",
     "    save_top_k=3,\n",
     "    mode='max',\n",
     "    dirpath='checkpoints/',\n",
