Updated model and parameters

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -20,6 +20,7 @@
     "from torch.utils.data import Dataset\n",
     "from ZeroShotDataset import ZeroShotDataset\n",
     "from params import *\n",
+    "from DatasetModeling import *\n",
     "from transformers import CLIPProcessor, CLIPModel\n",
     "from LossFunc import *\n",
     "from pytorch_lightning.callbacks import ModelCheckpoint, LearningRateMonitor\n",
@@ -33,13 +34,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "torch.set_float32_matmul_precision('medium')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_df = pd.read_csv(TrainParams.TRAIN_CSV_PATH)\n",
     "clip_processor = CLIPProcessor.from_pretrained('openai/clip-vit-base-patch16')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +179,7 @@
        "[973178 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,46 +190,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "hot dog     121\n",
-       "cabinet     121\n",
-       "house       121\n",
-       "platform    121\n",
-       "railroad    121\n",
-       "           ... \n",
-       "broccoli    121\n",
-       "mouse       121\n",
-       "keyboard    121\n",
-       "horse       121\n",
-       "moss        121\n",
-       "Name: label, Length: 171, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121 64115\n",
+      "36847 4560\n",
+      "121 242 240.83625730994152\n"
+     ]
     }
    ],
    "source": [
-    "label_freqs = train_df[\"label\"].value_counts()\n",
-    "min_freq = label_freqs.min()\n",
-    "max_freq = label_freqs.max()\n",
+    "balanced_train_df = balance_dataset(train_df)\n",
     "\n",
-    "balanced_train_df = pd.DataFrame(columns=train_df.columns)\n",
-    "for label in train_df[\"label\"].unique():\n",
-    "    balanced_train_df = balanced_train_df.append(train_df[train_df[\"label\"] == label].sample(min_freq), ignore_index=True)\n",
+    "inductive_dataset_train = inductive_dataset(balanced_train_df, TrainParams.UNSEEN_CLASSES)\n",
+    "inductive_dataset_val = inductive_dataset(balanced_train_df, TrainParams.SEEN_CLASSES)\n",
     "\n",
-    "balanced_train_df[\"label\"].value_counts()\n"
+    "print(len(inductive_dataset_train), len(inductive_dataset_val))\n",
+    "\n",
+    "# transductive_dataset = transductive_dataset(train_df, TrainParams.SEEN_CLASSES)\n",
+    "\n",
+    "# print min and max frequencies\n",
+    "label_freqs = balanced_train_df[\"label\"].value_counts()\n",
+    "print(label_freqs.min(), label_freqs.max(), label_freqs.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -247,12 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_dataset = ZeroShotDataset(\n",
-    "    df = balanced_train_df, \n",
+    "    df = inductive_dataset_train, \n",
     "    image_folder = TrainParams.DATASET_IMAGE_FOLDER_TRAIN,\n",
     "    mask_folder = TrainParams.DATASET_MASK_FOLDER_TRAIN,\n",
     "    image_size = TrainParams.IMAGE_DIM,\n",
@@ -262,11 +263,11 @@
     "    image_processor = clip_processor, \n",
     "    tokenizer = clip_processor.tokenizer, \n",
     "    filter_unseen = False,\n",
-    "    filter_seen = True\n",
+    "    filter_seen = False # True\n",
     ")\n",
     "\n",
     "val_dataset = ZeroShotDataset(\n",
-    "    df = balanced_train_df, \n",
+    "    df = inductive_dataset_val, \n",
     "    image_folder = TrainParams.DATASET_IMAGE_FOLDER_TRAIN,\n",
     "    mask_folder = TrainParams.DATASET_MASK_FOLDER_TRAIN,\n",
     "    image_size = TrainParams.IMAGE_DIM,\n",
@@ -275,28 +276,9 @@
     "    unseen_classes = TrainParams.UNSEEN_CLASSES, \n",
     "    image_processor = clip_processor, \n",
     "    tokenizer = clip_processor.tokenizer, \n",
-    "    filter_unseen = True,\n",
+    "    filter_unseen = False, # True\n",
     "    filter_seen = False\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch size: 8\n",
-      "Num workers: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Batch size:\", TrainParams.BATCH_SIZE)\n",
-    "print(\"Num workers:\", TrainParams.NUM_WORKERS)"
    ]
   },
   {
@@ -308,8 +290,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training images: 18997\n",
-      "Number of val images: 1694\n"
+      "Batch size: 8\n",
+      "Num workers: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Batch size:\", TrainParams.BATCH_SIZE)\n",
+    "print(\"Num workers:\", TrainParams.NUM_WORKERS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training images: 36847\n",
+      "Number of val images: 4560\n"
      ]
     }
    ],
@@ -320,22 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=True, collate_fn=train_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
     "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=False, collate_fn=val_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
     "test_model = CLIPConditionedSegFormer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.set_float32_matmul_precision('medium')"
    ]
   },
   {
@@ -389,23 +381,23 @@
       "  | Name      | Type                 | Params\n",
       "---------------------------------------------------\n",
       "0 | clip      | CLIPModel            | 149 M \n",
-      "1 | segformer | ConditionedSegFormer | 18.5 M\n",
+      "1 | segformer | ConditionedSegFormer | 13.4 M\n",
       "2 | neloss    | NELoss               | 0     \n",
       "3 | acc       | Accuracy             | 0     \n",
       "4 | dice      | DiceLoss             | 0     \n",
       "5 | iou       | IoULoss              | 0     \n",
       "6 | f1score   | F1Score              | 0     \n",
       "---------------------------------------------------\n",
-      "18.5 M    Trainable params\n",
+      "13.4 M    Trainable params\n",
       "149 M     Non-trainable params\n",
-      "168 M     Total params\n",
-      "672.563   Total estimated model params size (MB)\n"
+      "163 M     Total params\n",
+      "652.183   Total estimated model params size (MB)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea5f0289fbe84506b0f84cd561909b6b",
+       "model_id": "cc52e86cce5b419ab05e82500f1a3693",
        "version_major": 2,
        "version_minor": 0
       },
@@ -419,7 +411,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c76cefebb4b4c91a25e5201217769ec",
+       "model_id": "d4c9027e41304c128cdfc2ff4f73a038",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,6 +421,174 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b31f3e48db2146e184a4198eb3e56242",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, global step 4606: 'val_iou' reached 0.23361 (best 0.23361), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=00-val_loss=0.372-val_iou=0.23.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79c4764dc6144790afb0c9255bd688a8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, global step 9212: 'val_iou' reached 0.24829 (best 0.24829), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=01-val_loss=0.369-val_iou=0.25.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bee55fc38ec94c68b36f6c740f577b4a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, global step 13818: 'val_iou' reached 0.26209 (best 0.26209), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=02-val_loss=0.358-val_iou=0.26.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df8c0f8726954f108c379f22eaa6c514",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, global step 18424: 'val_iou' reached 0.28276 (best 0.28276), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=03-val_loss=0.339-val_iou=0.28.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "664562f49f20429195b872184f7b2412",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, global step 23030: 'val_iou' reached 0.29395 (best 0.29395), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=04-val_loss=0.334-val_iou=0.29.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "069c6fa37d274eaa8f28954b3644349b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, global step 27636: 'val_iou' reached 0.29798 (best 0.29798), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=05-val_loss=0.343-val_iou=0.30.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98f29fd526e949e89228b446e01095dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6, global step 32242: 'val_iou' reached 0.28883 (best 0.29798), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=06-val_loss=0.342-val_iou=0.29.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cfdcb0a0dbba434bb00ef7a76588c088",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7, global step 36848: 'val_iou' reached 0.30694 (best 0.30694), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=07-val_loss=0.338-val_iou=0.31.ckpt' as top 3\n"
+     ]
     }
    ],
    "source": [
