--- a/Train.ipynb
+++ b/Train.ipynb
@@ -206,12 +206,15 @@
    "source": [
     "balanced_train_df = balance_dataset(train_df)\n",
     "\n",
-    "inductive_dataset_train = inductive_dataset(balanced_train_df, TrainParams.UNSEEN_CLASSES)\n",
-    "inductive_dataset_val = inductive_dataset(balanced_train_df, TrainParams.SEEN_CLASSES)\n",
+    "# inductive_dataset_train = inductive_dataset(balanced_train_df, TrainParams.UNSEEN_CLASSES)\n",
+    "# inductive_dataset_val = inductive_dataset(balanced_train_df, TrainParams.SEEN_CLASSES)\n",
     "\n",
-    "print(len(inductive_dataset_train), len(inductive_dataset_val))\n",
+    "# print(len(inductive_dataset_train), len(inductive_dataset_val))\n",
     "\n",
-    "# transductive_dataset = transductive_dataset(train_df, TrainParams.SEEN_CLASSES)\n",
+    "transductive_dataset_train = transductive_dataset(train_df, TrainParams.SEEN_CLASSES)\n",
+    "transductive_dataset_val = transductive_dataset(train_df, TrainParams.UNSEEN_CLASSES)\n",
+    "\n",
+    "print(len(transductive_dataset_train), len(transductive_dataset_val))\n",
     "\n",
     "# print min and max frequencies\n",
     "label_freqs = balanced_train_df[\"label\"].value_counts()\n",
@@ -253,7 +256,8 @@
    "outputs": [],
    "source": [
     "train_dataset = ZeroShotDataset(\n",
-    "    df = inductive_dataset_train, \n",
+    "    # df = inductive_dataset_train, \n",
+    "    df = transductive_dataset_train,\n",
     "    image_folder = TrainParams.DATASET_IMAGE_FOLDER_TRAIN,\n",
     "    mask_folder = TrainParams.DATASET_MASK_FOLDER_TRAIN,\n",
     "    image_size = TrainParams.IMAGE_DIM,\n",
@@ -267,7 +271,8 @@
     ")\n",
     "\n",
     "val_dataset = ZeroShotDataset(\n",
-    "    df = inductive_dataset_val, \n",
+    "    # df = inductive_dataset_val, \n",
+    "    df = transductive_dataset_val,\n",
     "    image_folder = TrainParams.DATASET_IMAGE_FOLDER_TRAIN,\n",
     "    mask_folder = TrainParams.DATASET_MASK_FOLDER_TRAIN,\n",
     "    image_size = TrainParams.IMAGE_DIM,\n",
@@ -359,7 +364,7 @@
     "\n",
     "trainer = pl.Trainer(\n",
     "    accelerator='gpu',\n",
-    "    max_epochs=30,\n",
+    "    max_epochs=20,\n",
     "    callbacks=[\n",
     "        checkpoint_callback,\n",
     "        LearningRateMonitor(logging_interval='step')\n",
@@ -588,6 +593,195 @@
      "output_type": "stream",
      "text": [
       "Epoch 7, global step 36848: 'val_iou' reached 0.30694 (best 0.30694), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=07-val_loss=0.338-val_iou=0.31.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42bcc7fb34e546518cf4a52aebb33ae5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8, global step 41454: 'val_iou' reached 0.31678 (best 0.31678), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=08-val_loss=0.329-val_iou=0.32.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "563d8c891acc4e8bb4d0857ea31620a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9, global step 46060: 'val_iou' reached 0.32275 (best 0.32275), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=09-val_loss=0.335-val_iou=0.32.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29a7c65107cd4b03940ec7869c4ca0ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10, global step 50666: 'val_iou' was not in top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "69ec92064f5543f3ae609ef277cf314e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 11, global step 55272: 'val_iou' was not in top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9469354dc86d45f3bcc5ada7ab797451",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 12, global step 59878: 'val_iou' reached 0.31464 (best 0.32275), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=12-val_loss=0.330-val_iou=0.31.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ea00c4066e949c58ebf17ab28853c2b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 13, global step 64484: 'val_iou' reached 0.32239 (best 0.32275), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=13-val_loss=0.327-val_iou=0.32.ckpt' as top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0034ba4476c74432887c6b45e20a5456",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 14, global step 69090: 'val_iou' was not in top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dacb5b28fc484028bfbed40fc6442606",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 15, global step 73696: 'val_iou' was not in top 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da5acd0fbefc4e679576c1d57e15b52e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 16, global step 78302: 'val_iou' reached 0.32064 (best 0.32275), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=16-val_loss=0.337-val_iou=0.32.ckpt' as top 3\n"
      ]
     }
    ],
